src/App.css
.App {
  text-align: center;
  background-color: rgb(33,37,41);
}

html {
  height: 100%;
  width: 100%;
  background-color :rgb(33,37,41);
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

.project-img {
  animation: fadeIn ease 3s;
  background-size: cover;
  height: 250px;
  background: transparent no-repeat center;
}

@keyframes fadeIn {
  0% {opacity:0;}
  100% {opacity:1;}
}

.project-names {
  font-size: 40px;
  color: rgb(136, 255, 136);
  margin-bottom: 50px;
}

.projects-order {
  display: inline-block;
  padding: 30px;
}

.desc {
  font-size: 15px;
  width: 300px;
  overflow-wrap: break-word;  
  word-wrap: break-word; 
  word-break: break-word;
}

.herokubtn {
  margin: 10px;
  cursor: pointer;
  background-color: white;
  color: black;
  background-image: -webkit-linear-gradient(30deg, white 50%, transparent 50%);
  background-image: linear-gradient(30deg, white 50%, transparent 50%);
  background-size: 500px;
  background-repeat: no-repeat;
  background-position: 0%;
  -webkit-transition: background 300ms ease-in-out;
  transition: background 300ms ease-in-out;
}

.herokubtn:hover {
  background-position: 100%;
  color: white;
  background-color: black;
}

.gitbtn {
  margin: 10px;
  cursor: pointer;
  color: white;
  background-color: black;
  background-image: -webkit-linear-gradient(30deg, black 50%, transparent 50%);
  background-image: linear-gradient(30deg, black 50%, transparent 50%);
  background-size: 500px;
  background-repeat: no-repeat;
  background-position: 0%;
  -webkit-transition: background 300ms ease-in-out;
  transition: background 300ms ease-in-out;
}

.gitbtn:hover {
  background-position: 100%;
  color: black;
  background-color: white;
}

.main-title {
  font-size: 35px;
  color: white;
  overflow: hidden;
  margin: 0;
  white-space: nowrap;
  border-right: .15em solid white;
  animation: typing 4s linear 1s 1 normal both, blinking 900ms linear infinite;
  animation-delay: 5s;
}

.wrapper-title {
  display:flex;
  justify-content: left;
  margin-left: 50px;
}

.greeting {
  font-size: 15px;
  color: rgb(136, 255, 136);
  margin-top: 170px;
  text-align: left;
  margin-left: 50px;
  overflow: hidden;
  white-space: nowrap;
  border-right: .15em solid white;
  animation: typing-1 2s linear 1s 1 normal both, blinking 900ms linear infinite;
}

.name {
  font-size: 20px;
  color: rgb(136, 255, 136);
  font-weight: 600;
  text-align: left;
  margin-left: 50px;
  overflow: hidden;
  white-space: nowrap;
  border-right: .15em solid white;
  animation: typing-2 2s linear 1s 1 normal both, blinking 900ms linear infinite;
  animation-delay: 3s;
}

@keyframes typing {
  from { width: 0 }
  to { width: 48.3% }
}
@keyframes blinking {
  from { border-color: transparent }
  to { border-color: white; }
}

@keyframes typing-1 {
  from { width: 0 }
  to { width: 7.4% }
}

@keyframes typing-2 {
  from { width: 0 }
  to { width: 12% }
}

.second-title {
  animation: fadein 15s;
}

@keyframes fadein {
  from {
      opacity:0;
  }
  to {
      opacity:2;
  }
}

.golf-img {
  height: 460px;
  width: 280px;
  margin: auto;
  margin-top: 105px;
  border: none;
  border-radius: 10%;
  animation: fadeIn ease 3s;
}

@keyframes fadeIn {
  0% {opacity:0;}
  100% {opacity:1;}
}

.ravioli-img {
  height: 290px;
  width: 330px;
  margin: auto;
  margin-top: 130px;
  border: none;
  border-radius: 10%;
  animation: fadeIn ease 3s;
}

@keyframes fadeIn {
  0% {opacity:0;}
  100% {opacity:1;}
}

.about-info-top {
  font-weight: 300;
  font-size: 30px;
  display: grid;
  grid-template-columns: 1fr 1fr;
  line-height: 45px;
  color: rgb(136, 255, 136);
  margin-right: 50px;
}

.p-1 {
  margin-top: 105px;
  color: rgb(136, 255, 136);
}

.about-info-bottom {
  font-weight: 300;
  font-size: 30px;
  margin-top: 130px;
  display: grid;
  grid-template-columns: 1fr;
  color: rgb(136, 255, 136);
  margin-left: 50px;
  line-height: 45px;
}

.info {
  font-size: 30px;
  font-weight: 300;
  margin-top: 30px;
  text-align: center;
  padding: 20px;
  color: rgb(136, 255, 136);
}

.spinner {
  margin-top: 10px;
  color: white!important;
}

.mygit {
  color: white;
  height: 20px;
  width: 20px;
}

.home {
  color: rgb(136, 255, 136);
  height: 40px;
  width: 40px;
}

.mylink {
  color: royalblue;
  height: 20px;
  width: 20px;
}

.nav-link {
  color: rgb(136, 255, 136);
}

.nav-link:hover {
  color: white!important;
}

.navbar-brand {
  color: rgb(136, 255, 136);
}

.navbar-brand:hover {
  color: rgb(136, 255, 136)!important;
}

.title {
  color: rgb(136, 255, 136);
  width:fit-content;
  font-size: 90px;
  text-align: left;
  margin-left: 210px;
  margin-top: 80px;
  border-right: .15em solid white;
  overflow: hidden;
  white-space: nowrap;
  animation: typing-about 2s linear 1s 1 normal both, blinking 900ms linear infinite;
}

@keyframes typing-about {
  from { width: 0 }
  to { width: 43% }
}

.main-button {
  color: rgb(136, 255, 136);
  padding: 10px;
  float: left;
  margin-left: 330px;
}

.main-button:hover {
  color: white;
  background-color: rgb(33,37,41);
  border-color: white;
}

.my-image {
  border-radius: 3%;
  height: 300px;
  width: 300px;
  margin-top: 50px;
  float: right;
  margin-top: -300px;
  margin-right: 80px;
  filter: drop-shadow(30px 10px 4px black)
}

.footer {
  color:rgb(136, 255, 136);
  font-size: 17px;
  font-weight: 300;
  position:absolute;
  left:0;
  bottom:0;
  right:0;
}

.contact-title-top {
  color:rgb(136, 255, 136);
  margin-top: 170px;
}

.contact-title-bottom {
  color: white;
}

.contact {
  color: white;
}

.skills {
  color:rgb(136, 255, 136);
  font-weight: 600;
}

